# esp32-op-barcode-station

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/barcode/: CMakeLists.txt  Kconfig
components/barcode/src/: barcode_device.cpp  barcode_task.cpp
components/display/: CMakeLists.txt  Kconfig  idf_component.yml
components/display/src/: display_device.cpp  display_task.cpp
components/network/: CMakeLists.txt  Kconfig  idf_component.yml
components/network/include/: json_parser.h
components/network/src/: mqtt_service.cpp  ota_task.cpp  wifi_service.cpp
components/station_common/: CMakeLists.txt
components/station_common/include/: events.h
components/station_common/src/: events.cpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/include/: control_mode_store.h  events.h  json_parser.h  print_message.h  product_data.h
main/include/devices/: barcode_device.h  display_device.h
main/include/services/: mqtt_service.h  wifi_service.h
main/include/tasks/: barcode_task.h  display_task.h  ota_task.h
main/src/: control_mode_store.cpp  json_parser.cpp  main.cpp
main/src/devices/: barcode_device.cpp  display_device.cpp
main/src/services/: control_mode_store.cpp  mqtt_service.cpp  wifi_service.cpp
main/src/tasks/: barcode_task.cpp  display_task.cpp  ota_task.cpp
